--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   <header>
     <div class="content">
       <h1>ЮЖНЫЙ БЕРЕГ</h1>
-      <div class="subtitle">Лучшие места, отели и отдых в Боконбаево</div>
+      <div class="subtitle">Лучшие места, отели и незабываемый отдых</div>
       <div class="categories">
         <a href="#oteli" class="cat-card">
           <img src="https://images.unsplash.com/photo-1551918120-9739cb430c6a?auto=format&fit=crop&w=800&q=80" alt="Отели">
