--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     }
     header {
       height: 100vh;
-      background: url('https://images.unsplash.com/photo-1502082553048-f009c37129b9?auto=format&fit=crop&w=1600&q=80') center/cover no-repeat;
+      /* ←←← ТВОЯ КАРТИНКА ИССЫК-КУЛЯ НА ВЕСЬ ЭКРАН ←←← */
+      background: url('https://cdn.jsdelivr.net/gh/issykkul-kg/TravelKyrgyzstan@main/issyk-kul.jpg') center/cover no-repeat fixed;
+      
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -30,7 +32,8 @@
       content: "";
       position: absolute;
       inset: 0;
-      background: rgba(0,0,0,0.48);
+      /* Немного увеличили затемнение, чтобы текст читался ещё лучше на твоём фото */
+      background: rgba(0,0,0,0.55);
     }
     .content {
       position: relative;
@@ -53,6 +56,7 @@
       font-weight: 300;
       color: #a0f0ff;
     }
+
     /* === ЯРКИЕ КАРТОЧКИ-КАТЕГОРИИ === */
     .categories {
       display: flex;
@@ -84,7 +88,7 @@
       width: 100%;
       height: 180px;
       object-fit: cover;
-      transition: transform 0.5s ease;
+      transition: transform 0.5s;
     }
     .cat-card:hover img {
       transform: scale(1.12);
@@ -96,12 +100,13 @@
       font-weight: 700;
       letter-spacing: 1.5px;
       color: #ffffff;
-      transition: color 0.4s ease;
+      transition: color 0.4s;
     }
     .cat-card:hover .cat-title {
       color: #00ffcc;
       text-shadow: 0 0 15px rgba(0,255,204,0.6);
     }
+
     footer {
       text-align: center;
       padding: 50px 20px;
@@ -110,6 +115,7 @@
       margin-top: auto;
       color: #88e0ff;
     }
+
     @media (max-width: 768px) {
       .cat-card { width: calc(50% - 12px); }
       .cat-card img { height: 140px; }
@@ -124,7 +130,8 @@
   <header>
     <div class="content">
       <h1>ЮЖНЫЙ БЕРЕГ</h1>
-      <div class="subtitle">Лучшие места, отели и незабываемый отдых</div>
+      <div class="subtitle">Лучшие места, отели и незабываемый отдых на Иссык-Куле</div>
+
       <div class="categories">
         <a href="#oteli" class="cat-card">
           <img src="https://images.unsplash.com/photo-1551918120-9739cb430c6a?auto=format&fit=crop&w=800&q=80" alt="Отели">
@@ -153,6 +160,7 @@
       </div>
     </div>
   </header>
+
   <footer>
     © 2025 Южный Берег Иссык-Куля · Боконбаево и окрестности
   </footer>
