--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
     }
     header {
       height: 100vh;
-      /* ←←← ТВОЯ КАРТИНКА ИССЫК-КУЛЯ НА ВЕСЬ ЭКРАН ←←← */
       background: url('https://cdn.jsdelivr.net/gh/issykkul-kg/TravelKyrgyzstan@main/issyk-kul.jpg') center/cover no-repeat fixed;
-      
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -32,7 +30,6 @@
       content: "";
       position: absolute;
       inset: 0;
-      /* Немного увеличили затемнение, чтобы текст читался ещё лучше на твоём фото */
       background: rgba(0,0,0,0.55);
     }
     .content {
@@ -57,7 +54,7 @@
       color: #a0f0ff;
     }
 
-    /* === ЯРКИЕ КАРТОЧКИ-КАТЕГОРИИ === */
+    /* КАРТОЧКИ КАТЕГОРИЙ */
     .categories {
       display: flex;
       flex-wrap: wrap;
@@ -75,8 +72,8 @@
       overflow: hidden;
       width: 280px;
       transition: all 0.45s ease;
-      cursor: pointer;
       box-shadow: 0 8px 32px rgba(0,0,0,0.4);
+      text-decoration: none;
     }
     .cat-card:hover {
       transform: translateY(-16px);
@@ -90,9 +87,7 @@
       object-fit: cover;
       transition: transform 0.5s;
     }
-    .cat-card:hover img {
-      transform: scale(1.12);
-    }
+    .cat-card:hover img { transform: scale(1.12); }
     .cat-title {
       padding: 20px;
       text-align: center;
@@ -133,27 +128,32 @@
       <div class="subtitle">Лучшие места, отели и незабываемый отдых на Иссык-Куле</div>
 
       <div class="categories">
-        <a href="#oteli" class="cat-card">
+        <a href="hotels.html" class="cat-card">
           <img src="https://images.unsplash.com/photo-1551918120-9739cb430c6a?auto=format&fit=crop&w=800&q=80" alt="Отели">
           <div class="cat-title">ОТЕЛИ</div>
         </a>
-        <a href="#guesthouses" class="cat-card">
+
+        <a href="guest-houses.html" class="cat-card">
           <img src="https://images.unsplash.com/photo-1566073771259-6a8506099945?auto=format&fit=crop&w=800&q=80" alt="Гостевые дома">
           <div class="cat-title">ГОСТЕВЫЕ ДОМА</div>
         </a>
-        <a href="#yurts" class="cat-card">
+
+        <a href="yurt-camps.html" class="cat-card">
           <img src="https://images.unsplash.com/photo-1504280390367-361ea3373a5b?auto=format&fit=crop&w=800&q=80" alt="Юрточные лагеря">
           <div class="cat-title">ЮРТОЧНЫЕ ЛАГЕРЯ</div>
         </a>
-        <a href="#berkut" class="cat-card">
+
+        <a href="berkut.html" class="cat-card">
           <img src="https://images.unsplash.com/photo-1603899122634-5b7c7e1f8c8b?auto=format&fit=crop&w=800&q=80" alt="Охота с беркутом">
           <div class="cat-title">ОХОТА С БЕРКУТОМ</div>
         </a>
-        <a href="#places" class="cat-card">
+
+        <a href="beautiful-places.html" class="cat-card">
           <img src="https://images.unsplash.com/photo-1500534623283-312aade485b7?auto=format&fit=crop&w=800&q=80" alt="Красивые места">
           <div class="cat-title">КРАСИВЫЕ МЕСТА</div>
         </a>
-        <a href="#tours" class="cat-card">
+
+        <a href="tours.html" class="cat-card">
           <img src="https://images.unsplash.com/photo-1501785888041-af3ef285b470?auto=format&fit=crop&w=800&q=80" alt="Туры">
           <div class="cat-title">ТУРЫ</div>
         </a>
