--- a/berkut.html
+++ b/berkut.html
@@ -3,78 +3,80 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Охота с беркутом 2025 — Боконбаево</title>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700;900&display=swap" rel="stylesheet">
+<title>Шоу беркутчи • Мирланов Мерген • Иссык-Куль</title>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
 <style>
-*{margin:0;padding:0;box-sizing:border-box}
-body{font-family:'Inter',sans-serif;color:#f0f8ff;background:#0a0a0a min-height:100vh}
-.back-home{position:fixed;top:20px;left:20px;background:rgba(0,212,255,.25);backdrop-filter:blur(12px);color:#fff;padding:12px 26px;border-radius:50px;text-decoration:none;font-weight:700;border:1px solid rgba(0,255,255,.5);z-index:1000;transition:.3s}
-.back-home:hover{background:rgba(0,212,255,.5);transform:translateX(-6px);box-shadow:0 0 30px rgba(0,255,255,.6)}
-header{height:100vh;background:url('https://cdn.jsdelivr.net/gh/issykkul-kg/TravelKyrgyzstan@main/issyk-kul.jpg')center/cover fixed;display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;position:relative}
-header::before{content:"";position:absolute;inset:0;background:rgba(0,0,0,.62)}
-h1{font-size:clamp(3.5rem,11vw,7.5rem);font-weight:900;letter-spacing:6px;color:#fff;text-shadow:0 6px 30px #000;position:relative;z-index:2}
-.subtitle{font-size:1.7rem;color:#a0f8ff;margin-top:20px;position:relative;z-index:2}
-.container{max-width:1400px;margin:0 auto;padding:140px 20px 120px}
-.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(360px,1fr));gap:50px;margin-top:40px}
-.card{background:rgba(25,35,55,.96);backdrop-filter:blur(20px);border:1px solid rgba(0,255,255,.3);border-radius:32px;overflow:hidden;transition:.6s;box-shadow:0 15px 50px #000000b3}
-.card:hover{transform:translateY(-25px);border-color:#0ff;box-shadow:0 40px 90px rgba(0,255,255,.5)}
-.card img{width:100%;height:300px;object-fit:cover;transition:.7s}
-.card:hover img{transform:scale(1.12)}
-.card-body{padding:34px;text-align:center}
-.card-body h3{font-size:1.85rem;margin-bottom:16px;color:#0ff;font-weight:900}
-.card-body p{font-size:1.15rem;line-height:1.7;opacity:.92;margin-bottom:28px}
-.price-tag{display:inline-block;background:linear-gradient(90deg,#0ff,#0fc);color:#000;font-weight:900;font-size:1.35rem;padding:14px 32px;border-radius:50px;margin-bottom:25px;box-shadow:0 8px 25px rgba(0,255,255,.5)}
-.btn{display:inline-block;background:#25d366;color:#fff;font-weight:800;padding:16px 40px;border-radius:50px;text-decoration:none;font-size:1.2rem;box-shadow:0 10px 30px rgba(37,211,102,.5);transition:.4s}
-.btn:hover{transform:scale(1.1);box-shadow:0 15px 45px rgba(37,211,102,.8)}
-footer{text-align:center;padding:80px 20px;color:#88e0ff;font-size:1rem;opacity:.9}
-@media(max-width:768px){.grid{grid-template-columns:1fr;gap:60px}}
+  body{background:#0f172a;color:#fff;margin:0;padding:20px;font-family:Arial,sans-serif}
+  .container{max-width:1200px;margin:auto;display:grid;gap:25px;grid-template-columns:repeat(auto-fit,minmax(340px,1fr))}
+  .card{background:#1e293b;border-radius:24px;overflow:hidden;box-shadow:0 10px 30px rgba(0,0,0,.6)}
+  .swiper{height:380px}
+  .swiper-slide img{width:100%;height:100%;object-fit:cover}
+  .swiper-pagination-bullet{background:rgba(255,255,255,.5)}
+  .swiper-pagination-bullet-active{background:#fff;transform:scale(1.3)}
+  .card-body{padding:20px;text-align:center}
+  h3{margin:0 0 12px;font-size:1.6em;color:#67e8f9}
+  .price{font-size:1.5em;font-weight:bold;margin:15px 0;color:#86efac}
+  .price small{display:block;font-size:0.7em;color:#94a3b8;margin-top:5px}
+  .btn{display:block;margin:20px auto 10px;padding:15px 30px;background:linear-gradient(90deg,#67e8f9,#22d3ee);color:#0f172a;text-decoration:none;border-radius:50px;font-weight:bold;max-width:240px}
+  .btn-bron{background:linear-gradient(90deg,#f472b6,#ec4899)}
+  .contact{font-size:1.1em;margin:10px 0;color:#cbd5e1}
 </style>
 </head>
 <body>
-
-<a href="index.html" class="back-home">← На главную</a>
-
-<header>
-  <h1>ОХОТА С БЕРКУТОМ</h1>
-  <div class="subtitle">Настоящее кыргызское шоу в Боконбаево</div>
-</header>
-
 <div class="container">
-  <div class="grid">
 
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1603899122634-5b7c7e1f8c8b?w=1400&q=85" alt="Шоу">
-      <div class="card-body">
-        <h3>Классическое шоу</h3>
-        <p>Боконбаево · 30–45 минут<br>Беркут охотится на лису и зайца<br>Фото с орлом включено</p>
-        <div class="price-tag">1 000 сом / чел<br><small style="font-size:.9rem;opacity:.8">группа от 5 чел — 800 сом</small></div>
-        <a href="https://wa.me/996999123456?text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5!%20%D0%A5%D0%BE%D1%87%D1%83%20%D0%BD%D0%B0%20%D0%BA%D0%BB%D0%B0%D1%81%D1%81%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B5%20%D1%88%D0%BE%D1%83" class="btn">Записаться</a>
-      </div>
+  <!-- Классическое шоу -->
+  <div class="card">
+    <div class="swiper mySwiper"><div class="swiper-wrapper">
+      <div class="swiper-slide"><img src="images/klassika-1.jpg" alt="Беркут в полёте"></div>
+      <!-- сюда добавляй новые фото одной строкой -->
+    </div><div class="swiper-pagination"></div></div>
+    <div class="card-body">
+      <h3>Классическое шоу</h3>
+      <p>Боконбаево • 30–45 минут<br>Охота на лису и зайца<br>Фото и видео с беркутом включено</p>
+      <div class="price">1000 сом / чел<br><small>группа от 5 чел — 800 сом</small></div>
+      <div class="contact">Мирланов Мерген<br>+996 500 059 988</div>
+      <a href="https://wa.me/996500059988?text=Здравствуйте!%20Хочу%20на%20классическое%20шоу" class="btn">Записаться в WhatsApp</a>
     </div>
-
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1594736797933-d0501ba2fe65?w=1400&q=85" alt="Ночная охота">
-      <div class="card-body">
-        <h3>Ночная охота на волка</h3>
-        <p>Декабрь–февраль · Выезд в степь<br>Чай у костра · Реальная охота</p>
-        <div class="price-tag">от 25 000 сом<br>группа до 6 чел</div>
-        <a href="https://wa.me/996999123456?text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5!%20%D0%98%D0%BD%D1%82%D0%B5%D1%80%D0%B5%D1%81%D1%83%D0%B5%D1%82%20%D0%BD%D0%BE%D1%87%D0%BD%D0%B0%D1%8F%20%D0%BE%D1%85%D0%BE%D1%82%D0%B0" class="btn">Бронь</a>
-      </div>
-    </div>
-
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1612458973408-1e8f2c2c9fd3?w=1400&q=85" alt="Мастер-класс">
-      <div class="card-body">
-        <h3>Мастер-класс «Стань беркутчи»</h3>
-        <p>Обучение держанию беркута · 1,5 часа<br>Подходит детям и взрослым</p>
-        <div class="price-tag">1 500 сом / чел</div>
-        <a href="https://wa.me/996999123456?text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5!%20%D0%A5%D0%BE%D1%87%D1%83%20%D0%BC%D0%B0%D1%81%D1%82%D0%B5%D1%80-%D0%BA%D0%BB%D0%B0%D1%81%D1%81" class="btn">Записаться</a>
-      </div>
-    </div>
-
   </div>
+
+  <!-- Ночная охота на волка -->
+  <div class="card">
+    <div class="swiper mySwiper"><div class="swiper-wrapper">
+      <!-- сюда фото ночной охоты -->
+    </div><div class="swiper-pagination"></div></div>
+    <div class="card-body">
+      <h3>Ночная охота на волка</h3>
+      <p>Декабрь–февраль • Выезд в степь<br>Чай у костра • Настоящая охота с беркутами</p>
+      <div class="price">от 25 000 сом<br><small>группа до 6 человек</small></div>
+      <div class="contact">Мирланов Мерген<br>+996 500 059 988</div>
+      <a href="https://wa.me/996500059988?text=Здравствуйте!%20Хочу%20на%20ночную%20охоту%20на%20волка" class="btn btn-bron">Забронировать</a>
+    </div>
+  </div>
+
+  <!-- Мастер-класс «Стань беркутчи» -->
+  <div class="card">
+    <div class="swiper mySwiper"><div class="swiper-wrapper">
+      <!-- сюда фото мастер-класса -->
+    </div><div class="swiper-pagination"></div></div>
+    <div class="card-body">
+      <h3>Мастер-класс «Стань беркутчи»</h3>
+      <p>1,5 часа • Держите беркута на руке<br>Подходит детям и взрослым</p>
+      <div class="price">1500 сом / чел</div>
+      <div class="contact">Мирланов Мерген<br>+996 500 059 988</div>
+      <a href="https://wa.me/996500059988?text=Здравствуйте!%20Хочу%20на%20мастер-класс" class="btn">Записаться в WhatsApp</a>
+    </div>
+  </div>
+
 </div>
 
-<footer>© 2025 Южный Берег Иссык-Куля · Охота с беркутом — каждые выходные</footer>
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script>
+  document.querySelectorAll('.mySwiper').forEach(s => new Swiper(s,{
+    loop:true,
+    autoplay:{delay:4000,disableOnInteraction:false},
+    pagination:{el:'.swiper-pagination',clickable:true}
+  }));
+</script>
 </body>
 </html>
