--- a/berkut.html
+++ b/berkut.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Шоу беркутчи • Мирланов Мерген • Иссык-Куль</title>
+<title>Шоу беркутчи • Иссык-Куль</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
 <style>
   body{background:#0f172a;color:#fff;margin:0;padding:20px;font-family:Arial,sans-serif}
@@ -15,56 +15,48 @@
   .swiper-pagination-bullet-active{background:#fff;transform:scale(1.3)}
   .card-body{padding:20px;text-align:center}
   h3{margin:0 0 12px;font-size:1.6em;color:#67e8f9}
-  .price{font-size:1.5em;font-weight:bold;margin:15px 0;color:#86efac}
-  .price small{display:block;font-size:0.7em;color:#94a3b8;margin-top:5px}
-  .btn{display:block;margin:20px auto 10px;padding:15px 30px;background:linear-gradient(90deg,#67e8f9,#22d3ee);color:#0f172a;text-decoration:none;border-radius:50px;font-weight:bold;max-width:240px}
+  .price{font-size:1.name{color:#fcd34d;font-weight:bold}
+  .contact{font-size:1.1em;margin:12px 0;color:#cbd5e1;line-height:1.5}
+  .btn{display:block;margin:15px auto;padding:15px 30px;background:linear-gradient(90deg,#67e8f9,#22d3ee);color:#0f172a;text-decoration:none;border-radius:50px;font-weight:bold;max-width:260px}
   .btn-bron{background:linear-gradient(90deg,#f472b6,#ec4899)}
-  .contact{font-size:1.1em;margin:10px 0;color:#cbd5e1}
 </style>
 </head>
 <body>
 <div class="container">
 
-  <!-- Классическое шоу -->
+  <!-- Мирланов Мерген -->
   <div class="card">
     <div class="swiper mySwiper"><div class="swiper-wrapper">
-      <div class="swiper-slide"><img src="images/klassika-1.jpg" alt="Беркут в полёте"></div>
-      <!-- сюда добавляй новые фото одной строкой -->
+      <div class="swiper-slide"><img src="images/klassika-1.jpg" alt="Мирланов Мерген"></div>
+      <!-- добавляй сюда ещё фото Мергена -->
     </div><div class="swiper-pagination"></div></div>
     <div class="card-body">
-      <h3>Классическое шоу</h3>
-      <p>Боконбаево • 30–45 минут<br>Охота на лису и зайца<br>Фото и видео с беркутом включено</p>
-      <div class="price">1000 сом / чел<br><small>группа от 5 чел — 800 сом</small></div>
-      <div class="contact">Мирланов Мерген<br>+996 500 059 988</div>
-      <a href="https://wa.me/996500059988?text=Здравствуйте!%20Хочу%20на%20классическое%20шоу" class="btn">Записаться в WhatsApp</a>
+      <h3>Классическое шоу и ночная охота</h3>
+      <p>Боконбаево • 30–45 мин (шоу)<br>Декабрь–февраль (ночная охота на волка)</p>
+      <div class="price">Шоу — 1000 сом/чел<br>Ночная охота — от 25 000 сом (до 6 чел)</div>
+      <div class="contact">
+        <div class="name">Мирланов Мерген</div>
+        +996 500 059 988
+      </div>
+      <a href="https://wa.me/996500059988?text=Здравствуйте,%20Мерген!%20Хочу%20записаться" class="btn">Написать в WhatsApp</a>
     </div>
   </div>
 
-  <!-- Ночная охота на волка -->
+  <!-- Асылбеков Айдар -->
   <div class="card">
     <div class="swiper mySwiper"><div class="swiper-wrapper">
-      <!-- сюда фото ночной охоты -->
-    </div><div class="swiper-pagination"></div></div>
-    <div class="card-body">
-      <h3>Ночная охота на волка</h3>
-      <p>Декабрь–февраль • Выезд в степь<br>Чай у костра • Настоящая охота с беркутами</p>
-      <div class="price">от 25 000 сом<br><small>группа до 6 человек</small></div>
-      <div class="contact">Мирланов Мерген<br>+996 500 059 988</div>
-      <a href="https://wa.me/996500059988?text=Здравствуйте!%20Хочу%20на%20ночную%20охоту%20на%20волка" class="btn btn-bron">Забронировать</a>
-    </div>
-  </div>
-
-  <!-- Мастер-класс «Стань беркутчи» -->
-  <div class="card">
-    <div class="swiper mySwiper"><div class="swiper-wrapper">
-      <!-- сюда фото мастер-класса -->
+      <div class="swiper-slide"><img src="images/aydar.jpg" alt="Асылбеков Айдар"></div>
+      <!-- добавляй сюда ещё фото Айдара -->
     </div><div class="swiper-pagination"></div></div>
     <div class="card-body">
       <h3>Мастер-класс «Стань беркутчи»</h3>
-      <p>1,5 часа • Держите беркута на руке<br>Подходит детям и взрослым</p>
+      <p>1,5 часа • Держите беркута на руке<br>Подходит детям и взрослым • Фото/видео</p>
       <div class="price">1500 сом / чел</div>
-      <div class="contact">Мирланов Мерген<br>+996 500 059 988</div>
-      <a href="https://wa.me/996500059988?text=Здравствуйте!%20Хочу%20на%20мастер-класс" class="btn">Записаться в WhatsApp</a>
+      <div class="contact">
+        <div class="name">Асылбеков Айдар</div>
+        +996 702 487 381
+      </div>
+      <a href="https://wa.me/996702487381?text=Здравствуйте,%20Айдар!%20Хочу%20на%20мастер-класс" class="btn">Написать в WhatsApp</a>
     </div>
   </div>
 
