--- a/berkut.html
+++ b/berkut.html
@@ -33,9 +33,9 @@
       <!-- добавляй сюда ещё фото Мергена -->
     </div><div class="swiper-pagination"></div></div>
     <div class="card-body">
-      <h3>Классическое шоу и ночная охота</h3>
-      <p>Боконбаево • 30–45 мин (шоу)<br>Декабрь–февраль (ночная охота на волка)</p>
-      <div class="price">Шоу — 1000 сом/чел<br><small>от 5 чел — 800 сом</small><br>Ночная охота — от 25 000 сом (до 6 чел)</div>
+      <h3>Классическое шоу с Беркутом</h3>
+      <p>Боконбаево • 30–45 мин (шоу)</p>
+      <div class="price">Шоу от 8000 сом до 17000сом<br><small></small>
       <div class="contact">
         <div class="name">Мирланов Мерген</div>
         +996 500 059 988
@@ -51,9 +51,9 @@
       <!-- добавляй сюда ещё фото Айдара -->
     </div><div class="swiper-pagination"></div></div>
     <div class="card-body">
-      <h3>Мастер-класс «Стань беркутчи»</h3>
-      <p>1,5 часа • Держите беркута на руке<br>Фото и видео включены • Для детей и взрослых</p>
-      <div class="price">1500 сом / чел</div>
+      <h3>Классическое шоу с Беркутом</h3>
+      <p>Боконбаево • 30–45 мин (шоу)</p>
+      <div class="price">Шоу от 8000 сом до 17000сом</div>
       <div class="contact">
         <div class="name">Асылбеков Айдар</div>
         +996 702 487 381
